fix(popover, tooltip, alert, tree-item): Make component invisible and have no pointer events by default. (#4577)

--- a/src/assets/styles/includes.scss
+++ b/src/assets/styles/includes.scss
@@ -56,3 +56,11 @@
     }
   }
 }
+
+// mixin to provide default invisibility and disabling of pointer events for components.
+@mixin calciteHydratedHidden() {
+  :host([calcite-hydrated-hidden]) {
+    visibility: hidden;
+    pointer-events: none;
+  }
+}
